src/objects/MotoPlay_Data__c.object
<CustomObject>
    <fields>
        <fullName>App_Version__c</fullName>
        <label>App Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rating__c</fullName>
        <label>Current Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_User_Uninstalls__c</fullName>
        <label>Daily User Uninstalls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emporium_Date_Last_Downloaded__c</fullName>
        <label>Emporium Date Last Downloaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emporium_ID__c</fullName>
        <label>Emporium ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emporium_Last_Uploader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Emporium Last Uploader</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>MotoPlay Data</relationshipLabel>
        <relationshipName>MotoPlay_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emporium_Name__c</fullName>
        <label>Emporium Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Name__c</fullName>
        <label>GPS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_Date__c</fullName>
        <label>Push Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <picklist>
            <picklistValues>
                <fullName>Emporium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_User_Installs__c</fullName>
        <label>Total User Installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_User_installs_with_active_device__c</fullName>
        <label>Total User installs with active device</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Devices_w_installs__c</fullName>
        <label>Total # of Devices w/ installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Installs_on_active_Devices__c</fullName>
        <label>Total # of Installs on active Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Downloads__c</fullName>
        <label># of Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MotoPlay Data</label>
    <nameField>
        <label>MotoPlay Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MotoPlay Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>